@@ -1,11 +1,11 @@
 To do:
 	- Implement unit rotation
 	- Allow unit to shoot not only to the center of the building
-	- Bug: when ordering scouted unit it don't stop scout
-	- Correct mouse state when under shroud
-	- Implement shroud for minimap
+	- Shroud should be calculated as passable cell for every unit
 
 - High priority bugs:
+	- when ordering scouted unit it don't stop scout
+	- when disabling order, unit should stop
 
 - Medium priority bugs:
 	- Add Boost weapon (weapon for Amper unit)
